--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-1KN2SW2G2Y');
+        gtag('config', '%REACT_APP_GA_ID%');
     </script>
     <!-- End Google Analytics -->
 
