fix(disqus): Fix issue where same comments where being used across the site

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,17 @@
     </script>
     <!-- End Google Analytics -->
 
+    <!-- DISQUS -->
+    <script>
+        (function () {
+            var d = document, s = d.createElement('script');
+            s.src = 'https://flux-2.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <!-- End DISQUS -->
+
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 </head>
 <body>
